# latent-diffusion

./: .dockerignore  CHANGELOG  Dockerfile  brrr.py  config.py  diffuse.yaml  postgres_jobs.py  pqueue.py  pyproject.toml  run.py  txt2img.py
.github/: ld-build.yml
.github/workflows/: gcloud-build.yml
ldm/models/diffusion/: plms.py
ldm/modules/encoders/: modules.py
scripts/: txt2img.py
