[tool.poetry]
name = "latent-diffusion"
version = "0.1.0"
description = ""
authors = ["various"]

[tool.poetry.dependencies]
python = "^3.9"
#taming-transformers = {git="https://github.com/CompVis/taming-transformers", branch="master", subdirectory="taming"}
CLIP = {git="https://github.com/openai/CLIP", rev="main"}
scipy = "1.6.1"
torchvision = "^0.12.0"
numpy = "^1.22.3"
albumentations = "^1.1.0"
opencv-python = "^4.5.5"
pudb = "^2022.1.1"
imageio = "^2.16.1"
imageio-ffmpeg = "^0.4.5"
pytorch-lightning = "^1.6.0"
omegaconf = "^2.1.1"
einops = "^0.4.1"
torch-fidelity = "^0.3.0"
transformers = "^4.17.0"
torch = "^1.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
#requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git"]
build-backend = "poetry.core.masonry.api"
