[tool.poetry]
name = "latent-diffusion"
version = "0.1.0"
description = ""
authors = ["various"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
#taming-transformers = {git="https://github.com/CompVis/taming-transformers", branch="master", subdirectory="taming"}
#torch = {url = "https://download.pytorch.org/whl/cu113/torch-1.11.0%2Bcu113-cp39-cp39-linux_x86_64.whl"}
albumentations = "^1.2.1"
einops = "^0.4.1"
imageio = "^2.21.1"
imageio-ffmpeg = "^0.4.7"
numpy = "^1.23.1"
omegaconf = "^2.2.2"
opencv-python = "^4.6.0"
psycopg = "^3.0.16"
pytorch-lightning = "^1.7.1"
scipy = "^1.9.0"
torch = "^1.12.1"
torch-fidelity = "^0.3.0"
torchvision = "^0.13.1"
transformers = "^4.21.1"
TwitterAPI = "^2.7.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
#requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git"]
build-backend = "poetry.core.masonry.api"
